# go-quizlet-scraper

./: .gitignore  README.md  cli.go  go.mod  go.sum
cli/: cli.go
export/: export.go
gui/: gui.go  index.html
gui/scraper-sys/: Cargo.toml
gui/scraper-sys/lib/: libscraper.go
gui/scraper-sys/src/: lib.rs
gui_old/: Cargo.toml
gui_old/scraper/: Cargo.toml
gui_old/scraper-sys/: build.rs
gui_old/scraper/src/: main.rs
scraper/: scraper.go
