[package]
name = "scraper-sys"
version = "0.1.0"
authors = ["ashton0223 <30986310+ashton0223@users.noreply.github.com>"]
edition = "2018"
links = "scraper"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.53.1"